# CommonHE

./: .gitignore  LICENSE  README.md  README.zh-CN.md
.specify/: feature.json
agency-agents-zh/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.portable.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commonhe_bridge/: agent.rs  commands.rs  json.rs  mod.rs  payload.rs  provider.rs  shell.rs  status.rs
config/: commonhe-truth-source-gates.json  decision.sample.json  init-values.sample.json  required-capabilities.json  target-client-capabilities.json
core/: ARCHIVE-AND-TRUTH-SOURCE.md  CONTEXT-MANAGEMENT.md  EVALUATOR-PROTOCOL.md  GRADING-CRITERIA.md  HE-MANIFEST.md  LOOP-CONTROL.md  README.md  REVIEW-QA-GATE.md  SPRINT-CONTRACT.md  STATE-MACHINE.md  USER-CHECKLIST-PROTOCOL.md
init/: README.md  bootstrap-handoff-template.md  bootstrap-manifest.md  bootstrap-output.md  decision-output-template.md  discovery-conversation-template.md  discovery-guide.md  host-entry-adapter.md  init-flow.md  pm-behavior-principles.md  proposal-conversation-template.md  proposal-output-spec.md  proposal-template.md  role-selection-rules.md  solution-decision-schema.md
scripts/: build-desktop.ps1  publish-desktop-portable.ps1  sync-desktop-resources.ps1
templates/: AGENTS.template.md  CLAUDE.template.md  COORDINATOR-SUBAGENTS.template.md  README.md  coordinator-template-spec.md  init-result-index.template.md  project-context-template-spec.md  project_context.template.md  (+4 more)
(+94 files in other folders)
