[package]
name = "commonhe-desktop"
version = "1.0.0"
description = "星星的vibecoding启动器 v1.0"
authors = ["星星的vibecoding启动器"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
